FIX: use J17 toList() for streams